ui: fix spacing on conversation & view list pages

--- a/src/style/pages/View.scss
+++ b/src/style/pages/View.scss
@@ -5,6 +5,10 @@
 
 	.view-page-main {
 
+		.view-page-hero {
+			margin: 20px 0px 20px 0px;
+		}
+
 		.view-list-row {
 			margin-bottom: 50px;
 
